namespace StringManager.Core.Models
{
    public class Manufacturer
    {
        public int Id { get; set; }

        public string Name { get; set; }
    }
}
