namespace StringManager.Core.Models
{
    public class Tone
    {
        public int Id { get; set; }

        public string Name { get; set; }

        public double Frequency { get; set; }

        public double WaveLenght { get; set; }
    }
}
